--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,17 @@
     <string name="app_name">wedrive</string>
     <string name="title_activity_map">Map</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string name="error_empty">
+        Поле не може бути порожнім
+    </string>
+
+    <string name="error_phone">
+        Користувач за данним номером не знайдений
+    </string>
+
+    <string name="login_title">
+        <b>Авторизація</b> за номером телефону
+    </string>
+
 </resources>
