theming register page

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,16 +3,20 @@
     <string name="title_activity_map">Map</string>
 
 
-    <string name="error_empty">
-        Поле не може бути порожнім
-    </string>
+    <string name="error_empty">Поле не може бути порожнім</string>
+    <string name="error_len">Мінімальна довжина %1$s символи</string>
 
-    <string name="error_phone">
-        Користувач за данним номером не знайдений
-    </string>
+    <string name="user_exist">Користувач вже зареєстрований в платформі</string>
 
-    <string name="login_title">
-        <b>Авторизація</b> за номером телефону
-    </string>
+    <string name="login_title"><b>Авторизація</b> за номером телефону</string>
+    <string name="register_title"><b>Реєстрація</b> нового користувача</string>
+    <string name="registration">Реєстрація в платформі</string>
+    <string name="back_to_login">Спробувати інший номер?</string>
+    <string name="go_to_login">Вже зареєстрований?</string>
+    <string name="sign_in">Вхід</string>
+    <string name="next">Далі</string>
+    <string name="password">Пароль</string>
+    <string name="invalid_phone">Невірно вказаний номер</string>
+
 
 </resources>
